# docs/swagger.yaml
@@ -12,7 +12,7 @@ definitions:
     properties:
       code:
         type: integer
-      data: {}
+      data: { }
       msg:
         type: string
     type: object
@@ -84,11 +84,11 @@ definitions:
         description: 用户名
         type: string
     required:
-    - idNumber
-    - name
-    - phone
-    - sex
-    - username
+      - idNumber
+      - name
+      - phone
+      - sex
+      - username
     type: object
   request.EmployeeEditPassword:
     properties:
@@ -99,8 +99,8 @@ definitions:
       oldPassword:
         type: string
     required:
-    - newPassword
-    - oldPassword
+      - newPassword
+      - oldPassword
     type: object
   request.EmployeeLogin:
     properties:
@@ -111,8 +111,8 @@ definitions:
         example: admin
         type: string
     required:
-    - password
-    - username
+      - password
+      - username
     type: object
   response.EmployeeLogin:
     properties:
@@ -142,13 +142,13 @@ paths:
   /admin/category:
     delete:
       parameters:
-      - description: 分类id
-        in: query
-        name: id
-        required: true
-        type: string
+        - description: 分类id
+          in: query
+          name: id
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -159,19 +159,19 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
     post:
       parameters:
-      - description: 新增分类信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.CategoryDTO'
+        - description: 新增分类信息
+          in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/request.CategoryDTO'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -182,19 +182,19 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
     put:
       parameters:
-      - description: 编辑分类的内容
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.CategoryDTO'
+        - description: 编辑分类的内容
+          in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/request.CategoryDTO'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -209,49 +209,49 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
   /admin/category/list:
     get:
       parameters:
-      - description: 查询信息
-        in: query
-        name: type
-        required: true
-        type: string
+        - description: 查询信息
+          in: query
+          name: type
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
   /admin/category/page:
     get:
       parameters:
-      - description: 分类类型：1为菜品分类，2为套餐分类
-        in: query
-        name: type
-        type: integer
-      - description: 分页查询的name
-        in: query
-        name: name
-        type: string
-      - description: 分页查询的页数
-        in: query
-        name: page
-        type: integer
-      - description: 分页查询的页容量
-        in: query
-        name: pageSize
-        type: integer
+        - description: 分类类型：1为菜品分类，2为套餐分类
+          in: query
+          name: type
+          type: integer
+        - description: 分页查询的name
+          in: query
+          name: name
+          type: string
+        - description: 分页查询的页数
+          in: query
+          name: page
+          type: integer
+        - description: 分页查询的页容量
+          in: query
+          name: pageSize
+          type: integer
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -266,24 +266,24 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
   /admin/category/status/{status}:
     post:
       parameters:
-      - description: 分类id
-        in: query
-        name: id
-        required: true
-        type: string
-      - description: 状态
-        in: path
-        name: status
-        required: true
-        type: string
+        - description: 分类id
+          in: query
+          name: id
+          required: true
+          type: string
+        - description: 状态
+          in: path
+          name: status
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -294,65 +294,65 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Category
+        - Category
   /admin/common/upload:
     post:
       consumes:
-      - multipart/form-data
+        - multipart/form-data
       description: 接收一个文件，并将其上传到本地存储或云存储（如阿里云OSS）
       parameters:
-      - description: 文件
-        in: formData
-        name: file
-        required: true
-        type: file
+        - description: 文件
+          in: formData
+          name: file
+          required: true
+          type: file
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: 上传成功
           schema:
             allOf:
-            - $ref: '#/definitions/common.Result'
-            - properties:
-                ' data':
-                  type: string
-                ' msg':
-                  type: string
-                code:
-                  type: integer
-              type: object
+              - $ref: '#/definitions/common.Result'
+              - properties:
+                  ' data':
+                    type: string
+                  ' msg':
+                    type: string
+                  code:
+                    type: integer
+                type: object
         "400":
           description: 上传失败
           schema:
             allOf:
-            - $ref: '#/definitions/common.Result'
-            - properties:
-                ' data':
-                  type: string
-                ' msg':
-                  type: string
-                code:
-                  type: integer
-              type: object
+              - $ref: '#/definitions/common.Result'
+              - properties:
+                  ' data':
+                    type: string
+                  ' msg':
+                    type: string
+                  code:
+                    type: integer
+                type: object
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       summary: 上传文件到服务器
       tags:
-      - FileUpload
+        - FileUpload
   /admin/dish:
     post:
       parameters:
-      - description: 新增信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.DishDTO'
+        - description: 新增信息
+          in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/request.DishDTO'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -367,20 +367,20 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - dish
+        - dish
   /admin/employee:
     put:
       parameters:
-      - description: 信息
-        in: body
-        name: employee
-        required: true
-        schema:
-          $ref: '#/definitions/request.EmployeeDTO'
+        - description: 信息
+          in: body
+          name: employee
+          required: true
+          schema:
+            $ref: '#/definitions/request.EmployeeDTO'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -395,20 +395,20 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/:
     post:
       parameters:
-      - description: 新增员工信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.EmployeeDTO'
+        - description: 新增员工信息
+          in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/request.EmployeeDTO'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -419,19 +419,19 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/{id}:
     get:
       parameters:
-      - description: 员工id
-        in: path
-        name: id
-        required: true
-        type: string
+        - description: 员工id
+          in: path
+          name: id
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -442,20 +442,20 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/editPassword:
     put:
       parameters:
-      - description: id和新旧密码
-        in: body
-        name: employee
-        required: true
-        schema:
-          $ref: '#/definitions/request.EmployeeEditPassword'
+        - description: id和新旧密码
+          in: body
+          name: employee
+          required: true
+          schema:
+            $ref: '#/definitions/request.EmployeeEditPassword'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -470,30 +470,30 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/login:
     post:
       parameters:
-      - description: 员工登录信息
-        in: body
-        name: data
-        required: true
-        schema:
-          $ref: '#/definitions/request.EmployeeLogin'
+        - description: 员工登录信息
+          in: body
+          name: data
+          required: true
+          schema:
+            $ref: '#/definitions/request.EmployeeLogin'
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
           schema:
             allOf:
-            - $ref: '#/definitions/common.Result'
-            - properties:
-                data:
-                  $ref: '#/definitions/response.EmployeeLogin'
-              type: object
+              - $ref: '#/definitions/common.Result'
+              - properties:
+                  data:
+                    $ref: '#/definitions/response.EmployeeLogin'
+                type: object
         "400":
           description: Invalid request payload
           schema:
@@ -503,70 +503,70 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       tags:
-      - Employee
+        - Employee
   /admin/employee/logout:
     post:
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/page/:
     get:
       parameters:
-      - description: 分页查询的name
-        in: query
-        name: name
-        type: string
-      - description: 分页查询的页数
-        in: query
-        name: page
-        type: integer
-      - description: 分页查询的页容量
-        in: query
-        name: pageSize
-        type: integer
+        - description: 分页查询的name
+          in: query
+          name: name
+          type: string
+        - description: 分页查询的页数
+          in: query
+          name: page
+          type: integer
+        - description: 分页查询的页容量
+          in: query
+          name: pageSize
+          type: integer
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
           schema:
             allOf:
-            - $ref: '#/definitions/common.Result'
-            - properties:
-                data:
-                  $ref: '#/definitions/common.PageResult'
-              type: object
+              - $ref: '#/definitions/common.Result'
+              - properties:
+                  data:
+                    $ref: '#/definitions/common.PageResult'
+                type: object
         "501":
           description: fail
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
   /admin/employee/status/{status}:
     post:
       parameters:
-      - description: 员工状态
-        in: path
-        name: status
-        required: true
-        type: string
-      - description: 查询员工请求信息
-        in: query
-        name: id
-        required: true
-        type: string
+        - description: 员工状态
+          in: path
+          name: status
+          required: true
+          type: string
+        - description: 查询员工请求信息
+          in: query
+          name: id
+          required: true
+          type: string
       produces:
-      - application/json
+        - application/json
       responses:
         "200":
           description: success
@@ -577,9 +577,9 @@ paths:
           schema:
             $ref: '#/definitions/common.Result'
       security:
-      - JWTAuth: []
+        - JWTAuth: [ ]
       tags:
-      - Employee
+        - Employee
 securityDefinitions:
   JWTAuth:
     in: header
